--- a/data-structures.bib
+++ b/data-structures.bib
@@ -2,12 +2,69 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2014-07-20 10:26:02 -0500 
+%% Created for Jeff Erickson at 2015-09-09 12:27:41 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{cgkms-sbstw-15,
+	Arxiv = {1503.03105},
+	Author = {Chalermsook, Parinya and Goswami, Mayank and Kozma, László and Mehlhorn, Kurt and Saranurak, Thatchaphol},
+	Booktitle = {Proc. 23rd Eur. Symp. Algorithms},
+	Date-Added = {2015-09-09 17:22:14 +0000},
+	Date-Modified = {2015-09-09 17:27:33 +0000},
+	Title = {Self-Adjusting Binary Search Trees: {What} Makes Them Tick?},
+	Year = {2015, to appear}}
+
+@incollection{i-pdoc-13,
+	Author = {Iacono, John},
+	Booktitle = {Space-Efficient Data Structures, Streams, and Algorithms},
+	Date-Added = {2015-09-09 15:56:04 +0000},
+	Date-Modified = {2015-09-09 15:57:17 +0000},
+	Editor = {Brodnik, Andrej and López-Ortiz, Alejandro and Raman, Venkatesh and Viola, Alfredo},
+	Number = {8066},
+	Pages = {236--250},
+	Publisher = {Springer-Verlag},
+	Series = {Lecture Notes Comput. Sci.},
+	Title = {In Pursuit of the Dynamic Optimality Conjecture},
+	Year = {2013}}
+
+@inproceedings{bdl-doslb-08,
+	Author = {Bose, Prosenjit and Douïeb*, Karim and Langerman, Stefan},
+	Booktitle = {Proc. 19th Ann. ACM-SIAM Symp. Discrete Algorithms},
+	Date-Added = {2015-09-09 15:50:07 +0000},
+	Date-Modified = {2015-09-09 15:50:52 +0000},
+	Pages = {1106--1114},
+	Read = {1},
+	Title = {Dynamic optimality for skip lists and {B}-trees},
+	Year = {2008},
+	Bdsk-Url-1 = {http://dl.acm.org/citation.cfm?id=1347082.1347203}}
+
+@article{g-strlp-04,
+	Author = {Georgakopoulos, George F.},
+	Date-Added = {2015-09-09 15:46:21 +0000},
+	Date-Modified = {2015-09-09 15:47:21 +0000},
+	Journal = {J. Algorithms},
+	Number = {1},
+	Pages = {64--76},
+	Read = {1},
+	Title = {Splay Trees: {A} Reweighing Lemma and a Proof of Competitiveness vs. Dynamic Balanced Trees},
+	Volume = {51},
+	Year = {2004}}
+
+@article{bck-sodsl-03,
+	Author = {Blum, Avrim and Chawla*, Shuchi and Kalai*, Adam},
+	Date-Added = {2015-09-09 15:43:01 +0000},
+	Date-Modified = {2015-09-09 15:44:05 +0000},
+	Journal = {Algorithmica},
+	Number = {3},
+	Pages = {249--260},
+	Read = {1},
+	Title = {Static Optimality and Dynamic Search-Optimality in Lists and Trees.},
+	Volume = {36},
+	Year = {2003}}
 
 @inproceedings{at-twbds-00,
 	Author = {Andersson, Arne A. and Thorup, Mikkel},
@@ -19,7 +76,7 @@
 	Year = {2000}}
 
 @misc{e-tlmfp-13,
-	Author = {David Eisenstat},
+	Author = {Eisenstat, David},
 	Date-Added = {2013-11-04 21:11:41 +0000},
 	Date-Modified = {2013-11-04 21:19:06 +0000},
 	Keywords = {code},
@@ -30,7 +87,7 @@
 	Bdsk-Url-1 = {http://www.davideisenstat.com/trickle/}}
 
 @misc{e-mmspb-13,
-	Author = {David Eisenstat},
+	Author = {Eisenstat, David},
 	Comments = {C implementation of Cabello-Chambers-Erickson},
 	Date-Added = {2013-11-04 21:08:08 +0000},
 	Date-Modified = {2013-11-04 21:19:18 +0000},
@@ -42,19 +99,19 @@
 	Bdsk-Url-1 = {http://www.davideisenstat.com/mississippi/}}
 
 @misc{e-ddtcd-13,
-	Author = {David Eisenstat},
+	Author = {Eisenstat, David},
 	Comments = {C++ implementation of link-cut trees},
 	Date-Added = {2013-11-04 21:02:51 +0000},
 	Date-Modified = {2013-11-04 21:19:21 +0000},
 	Keywords = {code},
 	Month = {October},
-	Title = {DTree: {Dynamic} trees {\`a} la carte},
+	Title = {DTree: {Dynamic} trees à la carte},
 	Url = {http://www.davideisenstat.com/dtree/},
 	Year = {2013},
 	Bdsk-Url-1 = {http://www.davideisenstat.com/dtree/}}
 
 @inproceedings{p-stdsd-08,
-	Author = {Seth Pettie},
+	Author = {Pettie, Seth},
 	Booktitle = {Proc. 19th Ann. ACM-SIAM Symp. Discrete Algorithms},
 	Date-Added = {2013-10-11 16:47:48 +0000},
 	Date-Modified = {2013-10-11 16:48:43 +0000},
@@ -63,7 +120,7 @@
 	Year = {2008}}
 
 @inproceedings{dhikp-gbst-09,
-	Author = {Erik D. Demaine and Dion Harmon* and John Iacono and Daniel Kane* and Mihai P{\v a}tra{\c s}cu},
+	Author = {Demaine, Erik D. and Harmon*, Dion and Iacono, John and Kane*, Daniel and Pǎtraşcu, Mihai},
 	Booktitle = {Proc. 20th Ann. ACM-SIAM Symp. Discrete Algorithms},
 	Date-Added = {2013-10-11 16:45:43 +0000},
 	Date-Modified = {2013-10-11 16:49:50 +0000},
@@ -72,7 +129,7 @@
 	Year = {2009}}
 
 @article{g-ctapl-08,
-	Author = {George F. Georgakopoulos},
+	Author = {Georgakopoulos, George F.},
 	Date-Added = {2013-10-11 16:44:09 +0000},
 	Date-Modified = {2013-10-11 16:45:42 +0000},
 	Journal = {Inform. Proc. Lett.},
@@ -83,7 +140,7 @@
 	Year = {2008}}
 
 @article{tw-dtp-09,
-	Author = {Robert E. Tarjan and Renato F. Werneck},
+	Author = {Tarjan, Robert E. and Werneck, Renato F.},
 	Date-Added = {2013-07-05 16:06:48 +0000},
 	Date-Modified = {2013-11-03 22:01:30 +0000},
 	Journal = {J. Exper. Algorithmics},
@@ -93,7 +150,7 @@
 	Year = {2009}}
 
 @article{w-dsorq-85,
-	Author = {Dan E. Willard},
+	Author = {Willard, Dan E.},
 	Comments = {orthogonal emptiness: O(n log n) space, O(log n) query time, pointer machine},
 	Date-Added = {2013-01-30 00:39:40 +0000},
 	Date-Modified = {2013-01-30 00:43:22 +0000},
@@ -105,7 +162,7 @@
 	Year = {1985}}
 
 @article{c-fsaqa-86,
-	Author = {Bernard Chazelle},
+	Author = {Chazelle, Bernard},
 	Comments = {orthogonal emptiness: O(n log n / log log n) space, O(log n) query time},
 	Date-Added = {2013-01-30 00:32:07 +0000},
 	Date-Modified = {2013-01-30 00:33:11 +0000},
@@ -116,7 +173,7 @@
 	Year = {1986}}
 
 @article{c-fadsm-88,
-	Author = {Bernard Chazelle},
+	Author = {Chazelle, Bernard},
 	Comments = {orthogonal emptiness: O(n) space, O(log n) query time},
 	Date-Added = {2013-01-30 00:18:03 +0000},
 	Date-Modified = {2013-01-30 00:31:07 +0000},
@@ -128,7 +185,7 @@
 
 @inproceedings{clp-orsr-11,
 	Arxiv = {1103.5510},
-	Author = {Timothy M. Chan and Kasper Green Larsen and Mihai P{\u a}tra{\c s}cu},
+	Author = {Chan, Timothy M. and Larsen, Kasper Green and Pătraşcu, Mihai},
 	Booktitle = {Proc. 27th Ann. Symp. Comput. Geom.},
 	Comments = {O(n log log n) space, O(lg lg n) query time [rank space] -or- O(n) space, O(log^eps n) query time},
 	Date-Added = {2013-01-29 23:31:58 +0000},
@@ -138,7 +195,7 @@
 	Year = {2011}}
 
 @article{c-asdi-88,
-	Author = {Bernard Chazelle},
+	Author = {Chazelle, Bernard},
 	Date-Added = {2013-01-29 21:55:12 +0000},
 	Date-Modified = {2013-01-29 21:55:12 +0000},
 	Journal = {Algorithmica},
@@ -148,7 +205,7 @@
 	Year = {1988}}
 
 @book{clrs-ia-09,
-	Author = {Thomas H. Cormen and Charles E. Leiseron and Ronald L. Rivest and Clifford Stein},
+	Author = {Cormen, Thomas H. and Leiseron, Charles E. and Rivest, Ronald L. and Stein, Clifford},
 	Date-Added = {2011-05-24 10:44:23 -0500},
 	Date-Modified = {2011-05-24 10:46:17 -0500},
 	Edition = {3rd},
@@ -158,7 +215,7 @@
 	Year = {2009}}
 
 @book{o-ddds-83,
-	Author = {Mark H. Overmars*},
+	Author = {Overmars*, Mark H.},
 	Date-Added = {2011-01-22 15:07:12 -0600},
 	Date-Modified = {2011-01-22 15:07:49 -0600},
 	Number = {156},
@@ -168,7 +225,7 @@
 	Year = {1983}}
 
 @article{b-mbstu-75,
-	Author = {Jon L. Bentley},
+	Author = {Bentley, Jon L.},
 	Date-Added = {2011-01-22 15:05:19 -0600},
 	Date-Modified = {2011-01-22 15:06:06 -0600},
 	Journal = {Communications of the ACM},
@@ -179,7 +236,7 @@
 	Year = {1975}}
 
 @article{av-oemim-03,
-	Author = {Lars Arge and Jeffrey Scott Vitter},
+	Author = {Arge, Lars and Vitter, Jeffrey Scott},
 	Date-Added = {2011-01-22 15:01:16 -0600},
 	Date-Modified = {2011-01-22 15:02:30 -0600},
 	Journal = {SIAM J. Comput.},
@@ -190,7 +247,7 @@
 	Year = {2003}}
 
 @article{a-gbt-99,
-	Author = {Arne Andersson},
+	Author = {Andersson, Arne},
 	Date-Added = {2011-01-22 15:00:16 -0600},
 	Date-Modified = {2011-01-22 15:00:16 -0600},
 	Journal = {J.~Algorithms},
@@ -200,7 +257,7 @@
 	Year = 1999}
 
 @inproceedings{a-iprus-89,
-	Author = {Arne Andersson*},
+	Author = {Andersson*, Arne},
 	Booktitle = {Proc. Workshop on Algorithms and Data Structures},
 	Date-Added = {2011-01-22 15:00:16 -0600},
 	Date-Modified = {2011-01-22 15:00:16 -0600},
@@ -212,7 +269,7 @@
 	Year = 1989}
 
 @inproceedings{bd-sdus-04,
-	Author = {Mihai B\u{a}diou* and Erik D. Demaine},
+	Author = {B\u{a}diou*, Mihai and Demaine, Erik D.},
 	Booktitle = {Proc. 6th Latin American Sympos. Theoretical Informatics},
 	Date-Added = {2011-01-22 15:00:16 -0600},
 	Date-Modified = {2011-01-22 15:00:16 -0600},
@@ -224,7 +281,7 @@
 	Year = 2004}
 
 @article{bs-dsp1s-80,
-	Author = {Jon L. Bentley and James B. Saxe*},
+	Author = {Bentley, Jon L. and Saxe*, James B.},
 	Date-Added = {2011-01-22 15:00:16 -0600},
 	Date-Modified = {2011-01-22 15:00:16 -0600},
 	Journal = {J. Algorithms},
@@ -235,7 +292,7 @@
 	Year = 1980}
 
 @misc{cd-ads3-05,
-	Author = {Jeff Cohen* and Erik Demaine},
+	Author = {Cohen*, Jeff and Demaine, Erik},
 	Date-Added = {2011-01-22 15:00:16 -0600},
 	Date-Modified = {2011-01-22 15:00:16 -0600},
 	Month = {February 8},
@@ -245,7 +302,7 @@
 	Bdsk-Url-1 = {http://theory.csail.mit.edu/classes/6.897/spring05/lec.html}}
 
 @article{cmss-dfcst-00,
-	Author = {Richard Cole and Bud Mishra and Jeanette Schmidt and Alan Siegel},
+	Author = {Cole, Richard and Mishra, Bud and Schmidt, Jeanette and Siegel, Alan},
 	Date-Added = {2011-01-22 15:00:16 -0600},
 	Date-Modified = {2011-01-22 15:00:16 -0600},
 	Journal = {SIAM J. Comput.},
@@ -256,7 +313,7 @@
 	Year = 2000}
 
 @article{c-dfcst-00,
-	Author = {Richard Cole},
+	Author = {Cole, Richard},
 	Date-Added = {2011-01-22 15:00:16 -0600},
 	Date-Modified = {2011-01-22 15:00:16 -0600},
 	Journal = {SIAM J. Comput.},
@@ -267,16 +324,16 @@
 	Year = 2000}
 
 @inproceedings{dhip-doa-04,
-	Author = {Erik D. Demaine and Dion Harmon* and John Iacono and Mihai P\u{a}tra\c{s}cu**},
-	Booktitle = {Proc. 45th Annu. IEEE Sympos. Foundations Comput. Sci.},
+	Author = {Demaine, Erik D. and Harmon*, Dion and Iacono, John and P\u{a}tra\c{s}cu**, Mihai},
+	Booktitle = {Proc. 45th Ann. IEEE Symp. Foundations Comput. Sci.},
 	Date-Added = {2011-01-22 15:00:16 -0600},
-	Date-Modified = {2011-01-22 15:00:16 -0600},
+	Date-Modified = {2015-09-09 17:25:08 +0000},
 	Pages = {484--490},
 	Title = {Dynamic Optimality---Almost},
-	Year = 2004}
+	Year = {2004}}
 
 @techreport{dsw-lbfbs-05,
-	Author = {Jonathan Derryberry* and Daniel Dominic Sleator and Chengwen Chris Wang*},
+	Author = {Derryberry*, Jonathan and Sleator, Daniel Dominic and Wang*, Chengwen Chris},
 	Date-Added = {2011-01-22 15:00:16 -0600},
 	Date-Modified = {2011-01-22 15:00:16 -0600},
 	Day = 22,
@@ -289,25 +346,25 @@
 	Bdsk-Url-1 = {http://reports-archive.adm.cs.cmu.edu/anon/2005/CMU-CS-05-187.pdf}}
 
 @inproceedings{gr-st-93,
-	Author = {Igal Galperin* and Ronald R. Rivest},
-	Booktitle = {Proc. 4th Annu. ACM-SIAM Sympos. Discrete Algorithms},
+	Author = {Galperin*, Igal and Rivest, Ronald R.},
+	Booktitle = {Proc. 4th Annu. ACM-SIAM Symp. Discrete Algorithms},
 	Date-Added = {2011-01-22 15:00:16 -0600},
-	Date-Modified = {2011-01-22 15:00:16 -0600},
+	Date-Modified = {2015-09-09 17:24:42 +0000},
 	Pages = {165--174},
 	Title = {Scapegoat trees},
-	Year = 1993}
+	Year = {1993}}
 
 @inproceedings{i-astlw-01,
-	Author = {John Iacono*},
-	Booktitle = {Proc. 12th Annu. ACM-SIAM Sympos. Discrete Algorithms},
+	Author = {Iacono*, John},
+	Booktitle = {Proc. 12th Annu. ACM-SIAM Symp. Discrete Algorithms},
 	Date-Added = {2011-01-22 15:00:16 -0600},
-	Date-Modified = {2011-01-31 23:51:39 -0600},
+	Date-Modified = {2015-09-09 17:24:50 +0000},
 	Pages = {516--522},
 	Title = {Alternatives to splay trees with {$O(\log n)$} worst-case access times},
-	Year = 2001}
+	Year = {2001}}
 
 @article{ol-wcoid-81,
-	Author = {Mark H. Overmars* and Jan van Leeuwen},
+	Author = {Overmars*, Mark H. and van Leeuwen, Jan},
 	Date-Added = {2011-01-22 15:00:16 -0600},
 	Date-Modified = {2011-01-22 15:00:16 -0600},
 	Journal = {Inform. Process. Lett.},
@@ -317,7 +374,7 @@
 	Year = 1981}
 
 @article{st-sabst-85,
-	Author = {Daniel D. Sleator and Robert E. Tarjan},
+	Author = {Sleator, Daniel D. and Tarjan, Robert E.},
 	Date-Added = {2011-01-22 15:00:16 -0600},
 	Date-Modified = {2011-01-22 15:00:16 -0600},
 	Journal = {J. ACM},
@@ -328,7 +385,7 @@
 	Year = 1985}
 
 @article{s-dcsa-92,
-	Author = {Rajamani Sundar*},
+	Author = {Sundar*, Rajamani},
 	Date-Added = {2011-01-22 15:00:16 -0600},
 	Date-Modified = {2011-01-22 15:00:16 -0600},
 	Journal = {Combinatorica},
@@ -339,7 +396,7 @@
 	Year = 1992}
 
 @article{t-sastt-85,
-	Author = {Robert E. Tarjan},
+	Author = {Tarjan, Robert E.},
 	Date-Added = {2011-01-22 15:00:16 -0600},
 	Date-Modified = {2011-01-22 15:00:16 -0600},
 	Journal = {Combinatorica},
@@ -350,7 +407,7 @@
 	Year = 1985}
 
 @book{t-dsna-83,
-	Author = {Robert Endre Tarjan},
+	Author = {Tarjan, Robert Endre},
 	Date-Added = {2011-01-22 15:00:16 -0600},
 	Date-Modified = {2011-05-24 10:44:06 -0500},
 	Keywords = {textbook},
@@ -361,16 +418,16 @@
 	Year = {1983}}
 
 @inproceedings{wds-llcdb-06,
-	Author = {Chengwen Chris Wang* and Jonathan Derryberry* and Daniel Dominic Sleator},
-	Booktitle = {Proc. 17th Annu. ACM-SIAM Sympos. Discrete Algorithms},
+	Author = {Wang*, Chengwen Chris and Derryberry*, Jonathan and Sleator, Daniel Dominic},
+	Booktitle = {Proc. 17th Ann. ACM-SIAM Symp. Discrete Algorithms},
 	Date-Added = {2011-01-22 15:00:16 -0600},
-	Date-Modified = {2011-01-22 15:00:16 -0600},
+	Date-Modified = {2015-09-09 17:25:01 +0000},
 	Pages = {374--383},
 	Title = {{$O(\log \log n)$}-competitive dynamic binary search trees},
-	Year = 2006}
+	Year = {2006}}
 
 @article{w-lbabs-87,
-	Author = {Robert E. Wilber*},
+	Author = {Wilber*, Robert E.},
 	Date-Added = {2011-01-22 15:00:16 -0600},
 	Date-Modified = {2011-01-22 15:00:16 -0600},
 	Journal = {SIAM J. Computing},
@@ -381,7 +438,7 @@
 	Year = 1987}
 
 @article{dsst-mdsp-89,
-	Author = {James R. Driscoll and Niel Sarnak and Daniel D. Sleator and Robert E. Tarjan},
+	Author = {Driscoll, James R. and Sarnak, Niel and Sleator, Daniel D. and Tarjan, Robert E.},
 	Date-Added = {2010-05-14 08:56:21 -0500},
 	Date-Modified = {2010-05-14 08:57:51 -0500},
 	Journal = {J. Comput. System Sci.},
@@ -392,7 +449,7 @@
 	Year = {1989}}
 
 @article{at-opafn-00,
-	Author = {Stephen Alstrup and Mikkel Thorup},
+	Author = {Alstrup, Stephen and Thorup, Mikkel},
 	Date-Added = {2010-05-12 16:18:50 -0500},
 	Date-Modified = {2010-05-12 16:19:16 -0500},
 	Journal = {J. Algorithms},
@@ -405,7 +462,7 @@
 	Bdsk-Url-2 = {http://dx.doi.org/10.1006/jagm.2000.1079}}
 
 @article{ggt-udtns-91,
-	Author = {Andrew V. Goldberg and Michael D. Grigoriadis and Robert E. Tarjan},
+	Author = {Goldberg, Andrew V. and Grigoriadis, Michael D. and Tarjan, Robert E.},
 	Date-Added = {2010-05-11 17:50:14 -0500},
 	Date-Modified = {2010-05-11 17:50:14 -0500},
 	Journal = {Math. Program.},
@@ -415,7 +472,7 @@
 	Year = {1991}}
 
 @inproceedings{k-msspp-05,
-	Author = {Philip N. Klein},
+	Author = {Klein, Philip N.},
 	Booktitle = {Proc. 16th Ann. ACM-SIAM Symp. Discrete Algorithms},
 	Date-Added = {2010-04-25 23:15:29 -0500},
 	Date-Modified = {2010-04-25 23:15:41 -0500},
@@ -424,7 +481,7 @@
 	Year = {2005}}
 
 @inproceedings{a-feim-80,
-	Author = {Helmut Alt},
+	Author = {Alt, Helmut},
 	Booktitle = {Proc. 7th Int. Colloq. Automata Lang. Prog.},
 	Date-Added = {2009-07-27 01:25:49 -0500},
 	Date-Modified = {2009-07-27 01:28:13 -0500},
@@ -436,7 +493,7 @@
 	Year = {1980}}
 
 @article{a-cccaf-88,
-	Author = {Helmut Alt},
+	Author = {Alt, Helmut},
 	Date-Added = {2009-07-27 01:21:07 -0500},
 	Date-Modified = {2009-07-27 01:21:37 -0500},
 	Journal = {J. Assoc. Comput. Mach.},
@@ -448,17 +505,17 @@
 	Bdsk-Url-1 = {http://doi.acm.org.proxy2.library.uiuc.edu/10.1145/42282.214084}}
 
 @article{ss-smgz-71,
-	Author = {Arnold Sch{\"o}nhage and Volker Strassen},
+	Author = {Schönhage, Arnold and Strassen, Volker},
 	Date-Added = {2009-07-27 01:18:16 -0500},
 	Date-Modified = {2009-07-27 01:19:30 -0500},
 	Journal = {Computing},
 	Pages = {281--292},
-	Title = {Schnelle {Multiplikation} gro{\ss}er {Zahlen}},
+	Title = {Schnelle {Multiplikation} großer {Zahlen}},
 	Volume = {7},
 	Year = {1971}}
 
 @inproceedings{abhvw-dsaad-04,
-	Author = {Umut A. Acar and Guy E. Blelloch and Robert Harper and Jorge L. Vittes and Shan Leung Maverick Woo},
+	Author = {Acar, Umut A. and Blelloch, Guy E. and Harper, Robert and Vittes, Jorge L. and Woo, Shan Leung Maverick},
 	Booktitle = {Proc. 15th Ann. ACM-SIAM Symp. Discrete Algorithms},
 	Date-Added = {2009-07-06 05:53:45 -0500},
 	Date-Modified = {2009-07-06 05:54:48 -0500},
@@ -467,7 +524,7 @@
 	Year = {2004}}
 
 @article{hk-rfdga-99,
-	Author = {Monika R. Henzinger and Valerie King},
+	Author = {Henzinger, Monika R. and King, Valerie},
 	Date-Added = {2008-12-10 02:44:28 -0600},
 	Date-Modified = {2008-12-10 02:45:16 -0600},
 	Journal = {J. ACM},
@@ -478,7 +535,7 @@
 	Year = {1999}}
 
 @inproceedings{tw-satt-05,
-	Author = {Robert E. Tarjan and Renato F. Werneck},
+	Author = {Tarjan, Robert E. and Werneck, Renato F.},
 	Booktitle = {Proc. 16th Ann. ACM-SIAM Symp. Discrete Algorithms},
 	Date-Added = {2008-12-10 02:41:39 -0600},
 	Date-Modified = {2008-12-10 02:43:30 -0600},
@@ -487,7 +544,7 @@
 	Year = {2005}}
 
 @article{ahlt-mifdt-05,
-	Author = {Stephen Alstrup and Jacob Holm and Kristian {De Lichtenberg} and Mikkel Thorup},
+	Author = {Alstrup, Stephen and Holm, Jacob and {De Lichtenberg}, Kristian and Thorup, Mikkel},
 	Date-Added = {2008-12-10 02:38:56 -0600},
 	Date-Modified = {2008-12-10 02:41:20 -0600},
 	Journal = {ACM Trans. Algorithms},
@@ -498,7 +555,7 @@
 	Year = {2005}}
 
 @article{bgh-dsmd-99,
-	Author = {Julian Basch and Leonidas J. Guibas and John Hershberger},
+	Author = {Basch, Julian and Guibas, Leonidas J. and Hershberger, John},
 	Date-Added = {2008-12-09 18:07:00 -0600},
 	Date-Modified = {2008-12-09 18:08:06 -0600},
 	Journal = {J. Algorithms},
@@ -509,7 +566,7 @@
 	Year = {1999}}
 
 @article{ht-fafnc-84,
-	Author = {Dov Harel and Robert Endre Tarjan},
+	Author = {Harel, Dov and Tarjan, Robert Endre},
 	Date-Added = {2008-11-24 13:38:33 -0600},
 	Date-Modified = {2008-11-24 13:38:33 -0600},
 	Journal = {SIAM J. Comput.},
@@ -520,7 +577,7 @@
 	Year = 1984}
 
 @article{st-dsdt-83,
-	Author = {Daniel D. Sleator and Robert Endre Tarjan},
+	Author = {Sleator, Daniel D. and Tarjan, Robert Endre},
 	Date-Added = {2008-11-24 13:37:37 -0600},
 	Date-Modified = {2008-11-24 13:37:37 -0600},
 	Journal = {J. Comput. Syst. Sci.},
