--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,92 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2015-09-07 13:14:02 -0500 
+%% Created for Jeff Erickson at 2015-09-16 22:04:50 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{z-ndrl-72,
+	Author = {Zolotarev, Yegor I.},
+	Date-Added = {2015-09-17 02:39:11 +0000},
+	Date-Modified = {2015-09-17 02:57:48 +0000},
+	Journal = {Nouv. Ann. Math.~(2)},
+	Pages = {354--362},
+	Read = {1},
+	Title = {Nouvelle démonstration de la loi de réciprocité de {Legendre}},
+	Volume = {11},
+	Year = {1872}}
+
+@incollection{d-efx-92,
+	Author = {Dedekind, Richard},
+	Booktitle = {Berhard Riemann's Gesammelte Mathematische Werke und wissenschaftlicher Nachlass},
+	Date-Added = {2015-09-17 01:22:54 +0000},
+	Date-Modified = {2015-09-17 02:16:21 +0000},
+	Edition = {2nd},
+	Editor = {Weber, Heinrich and Dedekind, Richard},
+	Pages = {466--478},
+	Publisher = {Teubner},
+	Read = {1},
+	Title = {Erläuterungen zu den {Fragmenten} {XXVIII}},
+	Year = {1892}}
+
+@book{rg-ds-72,
+	Author = {Rademacher, Hans and Grosswald, Emil},
+	Date-Added = {2015-09-17 01:18:10 +0000},
+	Date-Modified = {2015-09-17 01:19:06 +0000},
+	Number = {16},
+	Publisher = {Math. Assoc. America},
+	Read = {1},
+	Series = {Carus Math. Monographs},
+	Title = {Dedekind Sums},
+	Year = {1972}}
+
+@article{m-ueads-57,
+	Author = {Meyer, Curt},
+	Date-Added = {2015-09-17 01:15:28 +0000},
+	Date-Modified = {2015-09-17 01:18:06 +0000},
+	Journal = {J. Reine Angew. Math.},
+	Pages = {143--203},
+	Read = {1},
+	Title = {Über einige {Anwendungen} {Dedekindscher} {Summen}},
+	Volume = {198},
+	Year = {1957}}
+
+@article{ddtt-sdgg-07,
+	Author = {Demaine, Erik D. and Demaine, Martin L. and Taslakian, Perouz and Toussaint, Godfried T.},
+	Date-Added = {2015-09-07 20:33:10 +0000},
+	Date-Modified = {2015-09-07 20:39:10 +0000},
+	Journal = {J. Math. Arts},
+	Number = {2},
+	Pages = {125--132},
+	Read = {1},
+	Title = {Sand drawings and {Gaussian} graphs},
+	Volume = {1},
+	Year = {2007}}
+
+@article{kzs-ngg-95,
+	Author = {Kennedy, John W. and Zervatius, Brigitte and Servatius, Herman},
+	Date-Added = {2015-09-07 20:28:08 +0000},
+	Date-Modified = {2015-09-07 20:28:53 +0000},
+	Journal = {Congr. Numer.},
+	Pages = {112--117},
+	Read = {1},
+	Title = {A note on {Gaussian} graphs},
+	Volume = {112},
+	Year = {1995}}
+
+@article{gk-ggd-94,
+	Author = {Gargano, Michael L. and Kennedy, John W.},
+	Date-Added = {2015-09-07 20:23:24 +0000},
+	Date-Modified = {2015-09-07 20:24:00 +0000},
+	Journal = {Congr. Numer.},
+	Month = {`},
+	Pages = {161--170},
+	Title = {Gaussian graphs and digraphs},
+	Volume = {101},
+	Year = {1994}}
 
 @article{zz-cct-00,
 	Arxiv = {math-ph/0002020},
@@ -92,7 +172,8 @@
 	Read = {1},
 	Title = {PlanarMap 1.2},
 	Url = {http://www.lix.polytechnique.fr/~schaeffe/PagesWeb/PlanarMap/index-en.html},
-	Year = {2003}}
+	Year = {2003},
+	Bdsk-Url-1 = {http://www.lix.polytechnique.fr/~schaeffe/PagesWeb/PlanarMap/index-en.html}}
 
 @article{cn-eklob2-96,
 	Author = {Cromwell, Peter R. and Nutt, Ian J.},
