--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,37 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2015-09-17 14:23:37 -0500 
+%% Created for Jeff Erickson at 2015-09-18 07:02:23 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{a-mfdsn-90,
+	Author = {Apostol, Tom M.},
+	Comments = {Page 72: Dedekind sums of consecutive Fibonacci numbers (exercise)},
+	Date-Added = {2015-09-18 11:57:42 +0000},
+	Date-Modified = {2015-09-18 11:59:34 +0000},
+	Edition = {2nd},
+	Number = {41},
+	Publisher = {Springer-Verlag},
+	Read = {1},
+	Series = {Graduate Texts in Mathematics},
+	Title = {Modular Functions and {Dirichlet} Series in Number Theory},
+	Year = {1990}}
+
+@article{zw-srgfl-04,
+	Author = {Zhao, Feng-Zhen and Wang, Tianming},
+	Date-Added = {2015-09-18 11:46:57 +0000},
+	Date-Modified = {2015-09-18 12:02:19 +0000},
+	Journal = {Fibonacci Quarterly},
+	Number = {3},
+	Pages = {250--255},
+	Read = {1},
+	Title = {Some results on generalized {Fibonacci} and {Lucas} numbers and {Dedekind} sums},
+	Volume = {42},
+	Year = {2004}}
 
 @article{z-ndrl-1872,
 	Author = {Zolotarev, Yegor I.},
