--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,135 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2015-09-18 07:02:23 -0500 
+%% Created for Jeff Erickson at 2015-09-27 08:31:14 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{t-dtm6a-92,
+	Author = {Truemper, Klaus},
+	Date-Added = {2015-09-27 13:30:24 +0000},
+	Date-Modified = {2015-09-27 13:31:14 +0000},
+	Journal = {J. Comb. Theory Ser. B},
+	Keywords = {ΔY},
+	Pages = {253--301},
+	Title = {A decomposition theory for matroids. {VI.} {Almost} regular matroids},
+	Volume = {55},
+	Year = {1992}}
+
+@article{ao-slecr-08,
+	Author = {Akkari, Safwan and Oxley, James},
+	Date-Added = {2015-09-27 13:25:38 +0000},
+	Date-Modified = {2015-09-27 13:26:50 +0000},
+	Journal = {Comb. Prob. Comput.},
+	Keywords = {ΔY},
+	Number = {04},
+	Pages = {367--384},
+	Read = {1},
+	Title = {Some local extremal connectivity results for matroids},
+	Volume = {2},
+	Year = {2008}}
+
+@article{w-drag-15,
+	Author = {Wagner, Donald},
+	Date-Added = {2015-09-27 13:18:35 +0000},
+	Date-Modified = {2015-09-27 13:19:32 +0000},
+	Journal = {Discrete Appl. Math.},
+	Pages = {158--167},
+	Read = {1},
+	Title = {Delta-wye reduction of almost-planar graphs},
+	Volume = {180},
+	Year = {2015}}
+
+@inproceedings{st-afkrm-02,
+	Author = {Staffelli, Ernesto and Thomas, Federico},
+	Booktitle = {Proc. 2002 IEEE Conf. Robotics and Automation},
+	Date-Added = {2015-09-27 13:08:31 +0000},
+	Date-Modified = {2015-09-27 13:10:43 +0000},
+	Pages = {2848--2855},
+	Read = {1},
+	Title = {Analytic formulation of the kinestatis of robot manipulators with arbitrary topology},
+	Year = {2002}}
+
+@article{j-smtra-95,
+	Author = {Jaeger, François},
+	Date-Added = {2015-09-27 13:00:56 +0000},
+	Date-Modified = {2015-09-27 13:08:27 +0000},
+	Journal = {J. Alg. Comb.},
+	Pages = {103--144},
+	Read = {1},
+	Title = {On spin models, triply regular association schemes, and duality},
+	Volume = {4},
+	Year = {1995}}
+
+@article{cs-cr-04,
+	Author = {Carroll, Gabriel D. and Speyer, David},
+	Date-Added = {2015-09-27 12:51:24 +0000},
+	Date-Modified = {2015-09-27 12:51:59 +0000},
+	Journal = {Elec. J. Combin.},
+	Pages = {\#R73},
+	Title = {The Cube Recurrence},
+	Volume = {11},
+	Year = {2004}}
+
+@article{br-cfsds-76,
+	Author = {Banerjee, S. K. and Rajamani, K.},
+	Date-Added = {2015-09-21 22:23:42 +0000},
+	Date-Modified = {2015-09-21 22:27:04 +0000},
+	Journal = {IEEE Trans. Reliability},
+	Number = {2},
+	Pages = {118--119},
+	Read = {1},
+	Title = {Closed Form Solutions for Delta-Star and Star-Delta Conversions of Reliability Networks},
+	Volume = {R-25},
+	Year = {1976}}
+
+@article{bs-sfece-12,
+	Author = {Buck, Gregory and Simon, Jonathan},
+	Date-Added = {2015-09-20 19:41:51 +0000},
+	Date-Modified = {2015-09-20 19:51:26 +0000},
+	Journal = {Proc. Royal Soc. A},
+	Number = {2148},
+	Pages = {4024--4040},
+	Read = {1},
+	Title = {The spectrum of filament entanglement complexity and entanglement phase transition},
+	Volume = {468},
+	Year = {2012}}
+
+@article{rostw-wsp-93,
+	Author = {{Ranse can Rensburg}, E. J. and Orlandin, E. and Sumners, D. W. and Tesi, M. C. and Whittington, S. G.},
+	Date-Added = {2015-09-20 19:17:11 +0000},
+	Date-Modified = {2015-09-20 19:18:04 +0000},
+	Journal = {J. Phys. A: Math. Gen.},
+	Pages = {L981--L986},
+	Read = {1},
+	Title = {The writhe of a self-avoiding polygon},
+	Volume = {26},
+	Year = {1993}}
+
+@article{rw-bakp-91,
+	Author = {{Ranse can Rensburg}, E. J. and Whittington, S. G.},
+	Date-Added = {2015-09-20 18:43:01 +0000},
+	Date-Modified = {2015-09-20 18:44:07 +0000},
+	Journal = {J. Phys. A: Math. Gen.},
+	Pages = {5553--5567},
+	Read = {1},
+	Title = {The {BFACF} algorithm and knotted polygons},
+	Volume = {24},
+	Year = {1991}}
+
+@article{pdsav-mvwrp-11,
+	Author = {Portillo, J. and Diao, Y. and Scharein, R. and Arsuga, J. and Vasquez, Mariel},
+	Date-Added = {2015-09-20 18:33:19 +0000},
+	Date-Modified = {2015-09-20 19:59:11 +0000},
+	Journal = {J. Phys. A: Math. Theor.},
+	Pages = {275004 (19 pages)},
+	Read = {1},
+	Title = {On the mean an variance of the writhe of random polygons},
+	Volume = {44},
+	Year = {2011}}
 
 @book{a-mfdsn-90,
 	Author = {Apostol, Tom M.},
