--- a/topology.bib
+++ b/topology.bib
@@ -2,20 +2,79 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2015-09-27 08:31:14 -0500 
+%% Created for Jeff Erickson at 2015-09-27 09:49:45 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
+@article{g-kqf-33,
+	Author = {Goeritz, Lebrecht},
+	Date-Added = {2015-09-27 14:19:04 +0000},
+	Date-Modified = {2015-09-27 14:19:57 +0000},
+	Journal = {Math. Z.},
+	Keywords = {Tait graph},
+	Number = {1},
+	Pages = {647--654},
+	Read = {1},
+	Title = {Knoten und quadratische formen},
+	Volume = {36},
+	Year = {1933}}
+
+@article{t-ndrpg-02,
+	Author = {Truemper, Klaus},
+	Date-Added = {2015-09-27 14:11:56 +0000},
+	Date-Modified = {2015-09-27 14:17:24 +0000},
+	Journal = {Congr. Numer.},
+	Pages = {213--220},
+	Read = {1},
+	Title = {A note on delta-wye-delta reductions of plane graphs},
+	Volume = {158},
+	Year = {2002}}
+
+@inproceedings{ps-drpgg-06,
+	Author = {Poger, Sofya and Sussman, Yoram J.},
+	Booktitle = {Algorithms and Complexity in Durham 2006: Proceedings of the Second ACiD Workshop},
+	Comments = {unavailable anywhere online},
+	Date-Added = {2015-09-27 14:06:50 +0000},
+	Date-Modified = {2015-09-27 14:08:14 +0000},
+	Pages = {119--130},
+	Title = {A Delta-Wye-Delta Reduction for Planar Grid Graphs in Subquadratic Time},
+	Year = {2006}}
+
+@article{y-fmwr-04,
+	Author = {Yu, Yaming},
+	Date-Added = {2015-09-27 13:49:33 +0000},
+	Date-Modified = {2015-09-27 13:51:22 +0000},
+	Journal = {J. Graph Theory},
+	Number = {4},
+	Pages = {317--321},
+	Read = {1},
+	Title = {Forbidden minors for wyw-delta-wye reducibility},
+	Volume = {47},
+	Year = {2004}}
+
+@article{y-mfmw-06,
+	Author = {Yu, Yaming},
+	Comments = {68897913659 minimal forbidden minors (in 20 equivalence classes), not known to be complete},
+	Date-Added = {2015-09-27 13:45:49 +0000},
+	Date-Modified = {2015-09-27 13:49:32 +0000},
+	Journal = {Elec. J. Combin.},
+	Pages = {\#R7},
+	Read = {1},
+	Title = {More forbidden minors for wye-delta-wye reducibility},
+	Volume = {13},
+	Year = {2006}}
+
 @article{t-dtm6a-92,
 	Author = {Truemper, Klaus},
 	Date-Added = {2015-09-27 13:30:24 +0000},
-	Date-Modified = {2015-09-27 13:31:14 +0000},
+	Date-Modified = {2015-09-27 13:33:35 +0000},
 	Journal = {J. Comb. Theory Ser. B},
 	Keywords = {ΔY},
 	Pages = {253--301},
+	Read = {1},
 	Title = {A decomposition theory for matroids. {VI.} {Almost} regular matroids},
 	Volume = {55},
 	Year = {1992}}
