--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,35 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2015-10-15 11:40:27 +0200 
+%% Created for Jeff Erickson at 2015-10-17 09:39:48 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@misc{t-fdh-04,
+	Arxiv = {math.CO/0405482},
+	Author = {Thurston, Dylan},
+	Date-Added = {2015-10-17 06:01:08 +0000},
+	Date-Modified = {2015-10-17 06:01:52 +0000},
+	Howpublished = {Preprint},
+	Month = {May},
+	Read = {1},
+	Title = {From dominos to hexagons},
+	Year = {2004}}
+
+@misc{p-tpgn-07,
+	Arxiv = {math/0609764},
+	Author = {Postnikov, Alexander},
+	Date-Added = {2015-10-17 05:53:41 +0000},
+	Date-Modified = {2015-10-17 05:57:48 +0000},
+	Howpublished = {Preprint},
+	Month = {October},
+	Read = {1},
+	Title = {Total positivity, {Grassmannians}, and networks},
+	Url = {http://math.mit.edu/~apost/papers/tpgrass.pdf},
+	Year = {2007}}
 
 @article{s-dgshct-91,
 	Author = {Schrijver, Alexander},
