--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,24 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2015-10-17 09:39:48 +0200 
+%% Created for Jeff Erickson at 2015-10-17 10:00:20 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{hs-scs-94,
+	Author = {Hass, Joel and Scott, Peter},
+	Date-Added = {2015-10-17 07:56:38 +0000},
+	Date-Modified = {2015-10-17 07:57:13 +0000},
+	Journal = {Topology},
+	Number = {1},
+	Pages = {25--43},
+	Read = {1},
+	Title = {Shortening curves on surfaces},
+	Volume = {33},
+	Year = {1994}}
 
 @misc{t-fdh-04,
 	Arxiv = {math.CO/0405482},
@@ -30,7 +42,8 @@
 	Read = {1},
 	Title = {Total positivity, {Grassmannians}, and networks},
 	Url = {http://math.mit.edu/~apost/papers/tpgrass.pdf},
-	Year = {2007}}
+	Year = {2007},
+	Bdsk-Url-1 = {http://math.mit.edu/~apost/papers/tpgrass.pdf}}
 
 @article{s-dgshct-91,
 	Author = {Schrijver, Alexander},
