--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,23 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2015-10-17 10:00:20 +0200 
+%% Created for Jeff Erickson at 2015-10-17 19:07:06 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{p-cails-02,
+	Author = {Paterson, Jane M.},
+	Date-Added = {2015-10-17 16:39:05 +0000},
+	Date-Modified = {2015-10-17 16:39:46 +0000},
+	Journal = {Topology Appl.},
+	Pages = {205--234},
+	Read = {1},
+	Title = {A combinatorial algorithm for immersed loops in surfaces},
+	Volume = {123},
+	Year = {2002}}
 
 @article{hs-scs-94,
 	Author = {Hass, Joel and Scott, Peter},
