--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,24 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2015-11-27 14:36:45 -0600 
+%% Created for Jeff Erickson at 2015-11-27 15:23:59 -0600 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{bc-anrms-86,
+	Author = {Bender, Edward A. and Canfield, E. Rodney},
+	Comments = {There are $O(n^{5(g-1)/2} 12^n)$ maps with $n$ edges on the orientable surface of genus $g=O(1)$},
+	Date-Added = {2015-11-27 21:16:27 +0000},
+	Date-Modified = {2015-11-27 21:19:47 +0000},
+	Journal = {J. Comb. Theory Ser. A},
+	Pages = {244--257},
+	Read = {1},
+	Title = {The asymptotic number of rooted maps on a surface},
+	Volume = {43},
+	Year = {1986}}
 
 @article{g-css-90,
 	Author = {Gage, Michael E.},
